--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,12 @@
 	<link rel="stylesheet" href="/css/app.css" />
 </head>
 <body>
+	<div id="todo-wrap">
+		<div id="todo">
+			<div id="todo-form"></div>
+			<div id="todo-list"></div>
+		</div>
+	</div>
 	<script src="/js/index.js"></script>
 </body>
 </html>
