--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,6 @@
 			<div id="todo-list"></div>
 		</div>
 	</div>
-	<script src="/js/index.js"></script>
+	<script src="/js/bundle.js"></script>
 </body>
 </html>
